Update: docker-compose.yml and Moodle_Docker_Lab_Complete.md for configuration changes
- Changed MYSQL_PASSWORD and MOODLE_DB_PASSWORD to a new secret value.
- Updated the exposed port for the Moodle service from 8080 to 8081.
- Added MOODLE_URL environment variable for the new port configuration.
- Expanded documentation to clarify Docker image and container concepts, roles of containers, volume management, and network communication in Docker Compose.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: moodle
       MYSQL_USER: moodleuser
-      MYSQL_PASSWORD: moodlepassword
+      MYSQL_PASSWORD: my-secret-pass
     volumes:
       - db_data:/var/lib/mysql
     networks:
@@ -18,13 +18,14 @@ services:
     image: lthub/moodle:latest
     container_name: moodle_app
     ports:
-      - "8080:80"
+      - "8081:80"
     environment:
       MOODLE_DB_TYPE: mariadb
       MOODLE_DB_HOST: db
       MOODLE_DB_NAME: moodle
       MOODLE_DB_USER: moodleuser
-      MOODLE_DB_PASSWORD: moodlepassword
+      MOODLE_DB_PASSWORD: my-secret-pass
+      MOODLE_URL: http://localhost:8081
     volumes:
       - moodledata:/moodledata
     depends_on:
